--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.14.0",
     "@astrojs/mdx": "^0.16.0",
     "@astrojs/react": "^2.0.2",
     "@astrojs/tailwind": "^3.0.1",
     "@types/canvas-confetti": "^1.4.3",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "astro": "^2.0.6",
+    "astro": "^2.0.5",
     "autoprefixer": "^10.4.7",
     "canvas-confetti": "^1.5.1",
     "postcss": "^8.4.14",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "sharp": "^0.31.3",
     "tailwindcss": "^3.0.24"
   }
 }
