--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/mdx": "^0.16.0",
     "@astrojs/react": "^2.0.2",
     "@astrojs/tailwind": "^3.0.1",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/canvas-confetti": "^1.4.3",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
