--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "react",
-    "types": ["@astrojs/image/client"]
+    "types": ["@astrojs/image/client"],
+    "strictNullChecks": true
   }
 }
