--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^6.1.3",
     "@astrojs/image": "^0.14.0",
     "@astrojs/mdx": "^0.16.0",
     "@astrojs/react": "^2.0.2",
@@ -19,7 +20,7 @@
     "@types/canvas-confetti": "^1.4.3",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "astro": "^2.0.5",
+    "astro": "^2.0.11",
     "autoprefixer": "^10.4.7",
     "canvas-confetti": "^1.5.1",
     "postcss": "^8.4.14",
