--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # # build output
-# dist/
+dist/
 # generated types
 .astro/
 
@@ -11,7 +11,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-
 
 # environment variables
 .env
