--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^5.0.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/canvas-confetti": "^1.4.3",
+    "@vercel/analytics": "^1.0.2",
     "astro": "^3.0.3",
     "autoprefixer": "^10.4.7",
     "canvas-confetti": "^1.5.1",
