--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@astrojs/mdx": "^1.0.0",
     "@astrojs/tailwind": "^5.0.0",
+    "@astrojs/vercel": "^4.0.3",
     "@tailwindcss/typography": "^0.5.9",
     "@types/canvas-confetti": "^1.4.3",
+    "@vercel/analytics": "^1.0.2",
     "astro": "^3.0.3",
     "autoprefixer": "^10.4.7",
     "canvas-confetti": "^1.5.1",
