--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "astro": "^3.0.3",
     "autoprefixer": "^10.4.7",
     "canvas-confetti": "^1.5.1",
+    "dotenv": "^16.3.1",
     "postcss": "^8.4.14",
     "sharp": "^0.31.3",
     "tailwindcss": "^3.3.3"
