--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "npx astro dev",
-    "start": "npx astro dev",
-    "build": "astro build",
+    "dev": "bunx astro dev",
+    "vercel": "bunx vercel dev",
+    "deploy": "vercel",
+    "build": "bun run deploy",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -22,7 +23,7 @@
     "canvas-confetti": "^1.5.1",
     "dotenv": "^16.3.1",
     "postcss": "^8.4.14",
-    "sharp": "^0.31.3",
+    "sharp": "^0.33.0",
     "tailwindcss": "^3.3.3"
   }
 }
