--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/vercel": "^5.2.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/canvas-confetti": "^1.4.3",
+    "@types/node": "^20.10.5",
     "@vercel/analytics": "^1.0.2",
     "astro": "^3.0.3",
     "autoprefixer": "^10.4.7",
