--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^20.10.5",
     "@vercel/analytics": "^1.0.2",
     "astro": "^3.0.3",
+    "astro-icon": "^1.0.3",
     "autoprefixer": "^10.4.7",
     "canvas-confetti": "^1.5.1",
     "dotenv": "^16.3.1",
