--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "^10.4.7",
     "canvas-confetti": "^1.5.1",
     "dotenv": "^16.3.1",
+    "passport": "^0.7.0",
     "postcss": "^8.4.14",
     "sharp": "^0.33.1",
     "tailwindcss": "^3.3.3"
