--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,14 @@ yarn-error.log*
 pnpm-debug.log*
 
 # environment variables
-.env
-.env.production
+.env*
+!.env.example
+
 
 # macOS-specific files
 .DS_Store
+
+# Others
 .vscode/settings.json
 .vercel/*
 .vercel
