--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "astro-icon": "^1.0.3",
     "autoprefixer": "^10.4.7",
     "canvas-confetti": "^1.5.1",
-    "passport": "^0.7.0",
     "postcss": "^8.4.14",
     "sharp": "^0.33.1",
-    "tailwindcss": "^3.3.3"
+    "simple-oauth2": "^5.0.0",
+    "tailwindcss": "^3.3.3",
+    "vercel": "latest"
   }
 }
