--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "astro": "^3.0.3",
     "autoprefixer": "^10.4.7",
     "canvas-confetti": "^1.5.1",
+    "detect-libc": "^2.0.2",
     "dotenv": "^16.3.1",
     "postcss": "^8.4.14",
     "sharp": "^0.33.1",
