--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "autoprefixer": "^10.4.7",
     "canvas-confetti": "^1.5.1",
     "postcss": "^8.4.14",
-    "sharp": "^0.33.1",
-    "simple-oauth2": "^5.0.0",
-    "tailwindcss": "^3.3.3",
-    "vercel": "latest"
+    "sharp": "latest",
+    "tailwindcss": "^3.3.3"
   }
 }
