--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ dist/
 
 # dependencies
 node_modules/
+node_modules
+node_modules.nosync
 
 # logs
 npm-debug.log*
@@ -15,7 +17,6 @@ pnpm-debug.log*
 # environment variables
 .env*
 !.env.example
-
 
 # macOS-specific files
 .DS_Store
