--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/mdx": "^2.1.0",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.0.2",
+    "@iconify-json/ic": "^1.1.17",
     "@libsql/client": "^0.4.1",
     "@tailwindcss/typography": "^0.5.9",
     "@types/canvas-confetti": "^1.4.3",
