--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,6 @@
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "strictNullChecks": true,
-    "verbatimModuleSyntax": true
+    "verbatimModuleSyntax": false
   }
 }
