--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "canvas-confetti": "^1.5.1",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.29"
   }
 }
