--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/db": "^0.8.1",
     "@astrojs/mdx": "^2.1.0",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.0.2",
