--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "bunx astro dev",
+    "dev": "bunx astro dev --verbose",
     "vercel": "bunx vercel dev",
     "deploy": "vercel",
     "build": "bunx astro build",
@@ -12,7 +12,6 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/db": "^0.8.1",
     "@astrojs/mdx": "^2.1.0",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.0.2",
@@ -26,7 +25,10 @@
     "astro-icon": "^1.0.3",
     "autoprefixer": "^10.4.7",
     "canvas-confetti": "^1.5.1",
+    "marked": "^12.0.1",
+    "pocketbase": "^0.21.1",
     "postcss": "^8.4.14",
+    "prismjs": "^1.29.0",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
