--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/canvas-confetti": "^1.4.3",
     "@types/node": "^20.10.5",
     "@vercel/analytics": "^1.0.2",
+    "@vercel/speed-insights": "^1.0.10",
     "astro": "^4.2.6",
     "astro-icon": "^1.0.3",
     "autoprefixer": "^10.4.7",
